# Expense-Tracker-API

./: .env.example  Cargo.toml  README.md  \  docker-compose.yaml
migrations/: 20250314170904_user_table.sql  20250322080007_expense_table.sql
src/: config.rs  database.rs  error.rs  lib.rs  main.rs  redis.rs  server.rs  state.rs  validation.rs
src/auth/: mod.rs  password.rs
src/auth/handler/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs
src/auth/token/: claims.rs  hash.rs  mod.rs  service.rs  utils.rs
src/auth/token/repository/: refresh_token.rs
src/auth/token/service/: access_token.rs  refresh_token.rs
src/config/: env_config.rs  mod.rs
src/database/: migration.rs  mod.rs
src/expense/: handler.rs  models.rs  repository.rs  utils.rs
src/server/: mod.rs  routes.rs
src/user/: model.rs  repository.rs
