[package]
name = "expense-tracker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tower = { version = "0.5.2", features = ["tracing"] }
tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
