[package]
name = "expense-tracker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
argon2 = "0.5.3"
async-trait = "0.1.87"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
fred = "10.1.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tower = { version = "0.5.2", features = ["tracing"] }
tower-http = { version = "0.6.2", features = ["trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
